fix: impl notifier

--- a/.env.local
+++ b/.env.local
@@ -1,2 +1,22 @@
 APP_PORT=8888
 APP_MODE=develop
+
+# APN_KEY_PATH=
+# APN_KEY_BASE64=
+# APN_KEY_TYPE=
+# APN_KEY_ID=
+# APN_TEAM_ID=
+# APN_PASSWORD=
+# APN_PRODUCTION=
+
+# FCM_ANDROID_API_KEY=
+
+# SMS_BASE_URL=
+# SMS_USERNAME=
+# SMS_PASSWORD=
+
+# SMTP_FROM_EMAIL=
+# SMTP_HOST=
+# SMTP_PORT=
+# SMS_USERNAME=
+# SMS_PASSWORD=
