--- a/.env.example
+++ b/.env.example
@@ -1,3 +1,24 @@
 APP_PORT=8080
 APP_MODE=develop # production
+
 AMQP_URI=amqp://guest:guest@localhost
+
+APN_KEY_PATH=
+APN_KEY_BASE64=
+APN_KEY_TYPE=
+APN_KEY_ID=
+APN_TEAM_ID=
+APN_PASSWORD=
+APN_PRODUCTION=
+
+FCM_ANDROID_API_KEY=
+
+SMS_BASE_URL=
+SMS_USERNAME=
+SMS_PASSWORD=
+
+SMTP_FROM_EMAIL=
+SMTP_HOST=
+SMTP_PORT=
+SMS_USERNAME=
+SMS_PASSWORD=
