fix: add mongo support

--- a/.env.example
+++ b/.env.example
@@ -3,6 +3,12 @@ APP_MODE=develop # production
 
 AMQP_URI=amqp://guest:guest@localhost
 
+MONGO_HOST=
+MONGO_PORT=
+MONGO_DB_NAME=
+MONGO_USERNAME=
+MONGO_PASSWORD=
+
 APN_KEY_PATH=
 APN_KEY_BASE64=
 APN_KEY_TYPE=
