--- a/.env.local
+++ b/.env.local
@@ -1,6 +1,12 @@
 APP_PORT=8888
 APP_MODE=develop
 
+# MONGO_HOST=
+# MONGO_PORT=
+# MONGO_DB_NAME=
+# MONGO_USERNAME=
+# MONGO_PASSWORD=
+
 # APN_KEY_PATH=
 # APN_KEY_BASE64=
 # APN_KEY_TYPE=
