--- a/.env.example
+++ b/.env.example
@@ -1,7 +1,7 @@
 APP_PORT=8080
 APP_MODE=develop # production
 
-AMQP_URI=amqp://guest:guest@localhost
+AMQP_URI=amqp://guest:guest@localhost:5672
 
 MONGO_HOST=
 MONGO_PORT=
