--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -11,6 +11,9 @@ services:
     image: rabbitmq:3-management-alpine
     container_name: "rabbitmq"
     restart: unless-stopped
+    ports:
+      - "5672:5672"
+      - "15672:15672"
     volumes:
       - rabbitmq_data:/var/lib/rabbitmq/
       - rabbitmq_logs:/var/log/rabbitmq
@@ -21,6 +24,8 @@ services:
     restart: unless-stopped
     volumes:
       - mongodb_data:/data/db
+    ports:
+      - "27017:27017"
     healthcheck:
       test: echo 'db.stats().ok' | mongosh localhost:27017/test --quiet
 
